@@ -1,4 +1,4 @@
-		 PTHREADS-WIN32 SNAPSHOT 2003-08-15
+		 PTHREADS-WIN32 SNAPSHOT 2003-08-19
 		 ----------------------------------
 	 Web Site: http://sources.redhat.com/pthreads-win32/
 	FTP Site: ftp://sources.redhat.com/pub/pthreads-win32
