@@ -79,7 +79,7 @@ main()
 {
   void * result = NULL;
 
-  assert(pthread_kill(pthread_self(), 0) == EINVAL);
+  assert(pthread_kill(pthread_self(), 1) == EINVAL);
 
   return 0;
 }
